kdelibs (4:2.0-19990303-1) unstable; urgency=low

  * version from CVS

 -- Stephan Kulow <coolo@kde.org>  Wed,  3 Mar 1999 22:25:37 +0100

kdelibs (4:1.1-19990217-1) unstable; urgency=low

  * new upstream version

 -- Stephan Kulow <coolo@kde.org>  Wed, 17 Feb 1999 19:09:42 +0100

kdelibs (4:1.1-19990207-2) unstable; urgency=low

  * fixed a bug with the jpeglib version

 -- Stephan Kulow <coolo@kde.org>  Tue,  9 Feb 1999 09:31:40 +0100

kdelibs (4:1.1-19990207-1) unstable; urgency=low

  * new upstream version 1.1 and new epoche

 -- Stephan Kulow <coolo@kde.org>  Sun,  7 Feb 1999 12:12:58 +0100

kdelibs (2:980710-1.0-1) unstable; urgency=low

  * new upstream version 1.0

 -- Stephan Kulow <coolo@kde.org>  Sun, 12 Jul 1998 10:12:19 +0200

kdelibs (2:980419-b4-1) unstable; urgency=low

  * new upstream version Beta4

 -- Stephan Kulow <coolo@kde.org>  Sun, 19 Apr 1998 13:58:13 +0200

kdelibs (2:980312-4) frozen; urgency=low

  * touch the .so.0 files to satisfy lintian
  * moved all unnecessary files out of -dev
  * moved the symbolic link default->en to kdelibs, where it belongs
  * fixed the shlibs format
  * new qt1g release (1.33)

 -- Stephan Kulow <coolo@kde.org>  Tue, 31 Mar 1998 13:00:00 +0100   

kdelibs (2:980312-3) frozen; urgency=low

  * new g++ and libstdc++ release (egcs-2.90.26-1)

 -- Stephan Kulow <coolo@kde.org>  Tue, 24 Mar 1998 14:45:16 +0100

kdelibs (2:980312-2) unstable; urgency=low

  * use debhelper now

 -- Stephan Kulow <coolo@kde.org>  Sun, 15 Mar 1998 21:28:42 +0100

kdelibs (2:980312-1) experimental; urgency=low

  * changed the files file
  * New upstream release

 -- Stephan Kulow <coolo@kde.org>  Thu, 12 Mar 1998 22:15:37 +0100

kdelibs (2:980310-3) experimental; urgency=low

  * removed the preinst script
  * use absolute paths instead of the one with 
  * changed directory for libraries

 -- Stephan Kulow <coolo@kde.org>  Wed, 11 Mar 1998 20:11:50 +0100

kdelibs (2:980310-2) experimental; urgency=low
