@@ -16,22 +16,22 @@ $(BUILDDIR)/build:
 	pwd=`pwd` ;\
 	test -d $(BUILDDIR) || mkdir $(BUILDDIR) ;\
 	cd $(BUILDDIR) ;\
-	kde_htmldir=/usr/doc/kde/HTML \
-	kde_appsdir=/usr/share/applnk \
-	kde_icondir=/usr/share/icons \
-	kde_sounddir=/usr/share/sounds \
-	kde_datadir=/usr/share/apps \
-	kde_locale=/usr/share/locale \
-	kde_cgidir=/usr/lib/cgi-bin \
-	kde_confdir=/etc/kde \
-	kde_mimedir=/usr/share/mimelnk \
-	kde_toolbardir=/usr/share/toolbar \
-	kde_wallpaperdir=/usr/share/wallpaper \
-	kde_bindir=/usr/X11R6/bin \
-	kde_partsdir=/usr/lib/parts \
+#	kde_htmldir=/usr/doc/kde/HTML \
+#	kde_appsdir=/usr/share/applnk \
+#	kde_icondir=/usr/share/icons \
+#	kde_sounddir=/usr/share/sounds \
+#	kde_datadir=/usr/share/apps \
+#	kde_locale=/usr/share/locale \
+#	kde_cgidir=/usr/lib/cgi-bin \
+#	kde_confdir=/etc/kde \
+#	kde_mimedir=/usr/share/mimelnk \
+#	kde_toolbardir=/usr/share/toolbar \
+#	kde_wallpaperdir=/usr/share/wallpaper \
+#	kde_bindir=/usr/X11R6/bin \
+#	kde_partsdir=/usr/lib/parts \
 	CFLAGS="-O2 -Wall -Wno-uninitialized -g" \
 	CXXFLAGS="-O2 -Wall -Wno-uninitialized -g" \
-	$$pwd/configure --prefix=/usr --enable-debug \
+	$$pwd/configure --prefix=/opt/kde2pre --enable-debug \
 	--disable-rpath --with-qt-dir=/usr/lib/qt2beta \
 	--includedir=/usr/include/kde \
 	--libdir=/usr/X11R6/lib  && make
@@ -53,29 +53,30 @@ binary-indep:	build
 
 binary-arch2: build
 	dh_installdirs
-	make prefix=`pwd`/debian/tmp/usr \
-	   kde_htmldir="`pwd`/debian/tmp/usr/doc/kde/HTML" \
-	   kde_appsdir="`pwd`/debian/tmp/usr/share/applnk" \
-	   kde_icondir="`pwd`/debian/tmp/usr/share/icons" \
-	   kde_sounddir="`pwd`/debian/tmp/usr/share/sounds" \
-	   kde_datadir="`pwd`/debian/tmp/usr/share/apps" \
-	   kde_locale="`pwd`/debian/tmp/usr/share/locale" \
-	   kde_cgidir="`pwd`/debian/tmp/usr/lib/cgi-bin" \
-	   kde_confdir="`pwd`/debian/tmp/etc/kde" \
-	   kde_mimedir="`pwd`/debian/tmp/usr/share/mimelnk" \
-	   kde_toolbardir="`pwd`/debian/tmp/usr/share/toolbar" \
-	   kde_wallpaperdir="`pwd`/debian/tmp/usr/share/wallpaper" \
-	   kde_bindir="`pwd`/debian/tmp/usr/X11R6/bin" \
-	   kde_partsdir="`pwd`/debian/tmp/usr/lib/parts" \
-	   kde_confdir="`pwd`/debian/tmp/etc/kde" \
-	   includedir=`pwd`/debian/tmp/usr/include/kde \
-	   libdir=`pwd`/debian/tmp/usr/X11R6/lib install 
+	make prefix=`pwd`/debian/tmp/opt/kde2pre \
+#	   kde_htmldir="`pwd`/debian/tmp/usr/doc/kde/HTML" \
+#	   kde_appsdir="`pwd`/debian/tmp/usr/share/applnk" \
+#	   kde_icondir="`pwd`/debian/tmp/usr/share/icons" \
+#	   kde_sounddir="`pwd`/debian/tmp/usr/share/sounds" \
+#	   kde_datadir="`pwd`/debian/tmp/usr/share/apps" \
+#	   kde_locale="`pwd`/debian/tmp/usr/share/locale" \
+#	   kde_cgidir="`pwd`/debian/tmp/usr/lib/cgi-bin" \
+#	   kde_confdir="`pwd`/debian/tmp/etc/kde" \
+#	   kde_mimedir="`pwd`/debian/tmp/usr/share/mimelnk" \
+#	   kde_toolbardir="`pwd`/debian/tmp/usr/share/toolbar" \
+#	   kde_wallpaperdir="`pwd`/debian/tmp/usr/share/wallpaper" \
+#	   kde_bindir="`pwd`/debian/tmp/usr/X11R6/bin" \
+#	   kde_partsdir="`pwd`/debian/tmp/usr/lib/parts" \
+#	   kde_confdir="`pwd`/debian/tmp/etc/kde" \
+#	   includedir=`pwd`/debian/tmp/usr/include/kde \
+#	   libdir=`pwd`/debian/tmp/usr/X11R6/lib \
+	install 
 
 	perl -w debian/kderules 
 	dh_movefiles 
 	dh_installdocs 
 	dh_installchangelogs
-	dh_strip 
+#	dh_strip 
 	dh_compress 
 	dh_fixperms 
 	dh_suidregister 
